fix: more contrast for border-gradient cards on :hover

--- a/src/app/scss/styles/borderGradient.scss
+++ b/src/app/scss/styles/borderGradient.scss
@@ -1,6 +1,6 @@
 .border-gradient {
   @apply relative;
-  @apply bg-background bg-clip-padding transition-colors duration-300 ease-out-cubic hover:bg-background/95;
+  @apply bg-background bg-clip-padding transition-colors duration-300 ease-out-cubic hover:bg-background/90;
   @apply border-solid border-transparent @@:border-[1px];
 
   &:before {
@@ -13,8 +13,8 @@
     background-size: 100% 200%;
     background-image: linear-gradient(
       to bottom,
-      rgb(241 243 249 / 0.35) 0%,
-      rgb(241 243 249 / 0.35) 55%,
+      rgb(241 243 249 / 0.45) 0%,
+      rgb(241 243 249 / 0.45) 55%,
       rgb(161 163 168 / 0.08) 100%
     );
 
